# Captive-Wi-Fi

./: .gitignore  Cmakelists.txt  README.md
components/domain/: CMakeLists.txt  OAuthUserService.cpp  User.cpp
components/domain/include/domain/entities/: User.h
components/domain/include/domain/repositories/: IUserRepository.h
components/domain/include/domain/service/: OAuthUserService.h
components/infrastructure/: CMakeLists.txt
components/infrastructure/include/infrastructure/persistence/: NvsUserRepository.h
components/infrastructure/persistence/: NvsUserRepository.cpp
main/: main.cpp
src/main/domain/entities/: User.cpp  User.h
src/main/domain/interfaces/: IUserRepository.h
src/main/domain/services/: OAuthUserService.h
tests/: host_main.cpp
tests/mocks/: InMemoryUserRepository.cpp  InMemoryUserRepository.h
